--- a/entrega3/Makefile
+++ b/entrega3/Makefile
@@ -1,12 +1,11 @@
-all: compilar
-
+all: ejecutar
 bison: parser.y
-	bison -v -d parser.y
-
-flex: scanner.l
+	bison -d -v parser.y
+flex: scanner.l parser.tab.h tablaSimbolos.h
 	flex scanner.l
-	gcc -c lex.yy.c 
-
-compilar: flex bison
-	gcc parser.tab.c lex.yy.c -lfl -lm
-
+ejecutar: bison flex
+	gcc -c tablaSimbolos.c
+	gcc -c lex.yy.c
+	gcc -o ejecutar parser.tab.c lex.yy.o  tablaSimbolos.o -ll
+borrar:
+	rm -rf ejecutar lex.yy.c lex.yy.o parser.output parser.tab.c parser.tab.h o tablaSimbolos.o 
