--- a/entrega3/Makefile
+++ b/entrega3/Makefile
@@ -6,8 +6,9 @@ flex: scanner.l parser.tab.h tablaSimbolos.h
 ejecutar: bison flex
 	gcc -c tablaSimbolos.c
 	gcc -c tablaCuadruplas.c
+	gcc -c listaBooleanas.c 
 	gcc -c lex.yy.c
-	gcc -o ejecutar parser.tab.c lex.yy.o tablaCuadruplas.o tablaSimbolos.o -ll
+	gcc -o ejecutar parser.tab.c lex.yy.o tablaCuadruplas.o tablaSimbolos.o listaBooleanas.o -ll
 borrar:
 	rm -rf ejecutar lex.yy.c lex.yy.o parser.output parser.tab.c parser.tab.h o tablaSimbolos.o 
 soloflex: borrar
